modiid code